--- a/src/main/resources/static/css/menu/menuCustomerList.css
+++ b/src/main/resources/static/css/menu/menuCustomerList.css
@@ -154,7 +154,7 @@ body {
 #oneOnOneChatBtn {
     width: 80px;
     height: 80px;
-    background-color: #fff7e6;
+    background-color: #ffefd7;
     border: none;
     border-radius: 50%;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
