--- a/src/main/resources/templates/menu/menuCustomerList.html
+++ b/src/main/resources/templates/menu/menuCustomerList.html
@@ -20,8 +20,11 @@
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/allergyCheck.js}"></script>
-    <script th:src="@{/js/menu/menuCustomerList.js}"></script>
+    <script th:src="@{/js/connectWebSocket.js}"></script>
     <script th:src="@{/js/modal-chat.js}"></script>
+    <script th:src="@{/js/menu/menuCustomerList.js}"></script>
+
+
 
     <style>
         #chatTooltip {
@@ -59,6 +62,7 @@
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
 
+<main>
 <!-- 타이틀 -->
 <h1 class="main-heading">ENJOY! SAND-IT!</h1>
 
@@ -79,31 +83,15 @@
     <!-- 일반 메뉴는 JS에서 동적 로딩 -->
 </div>
 
-<!-- 1:1 채팅 버튼 -->
-<div class="chat-item">
-    <button id="oneOnOneChatBtn"  type="button">
-        <img id="sandit-chat"
-             src="https://himedia-sandis-20205.s3.ap-northeast-2.amazonaws.com/uploads/sandit.png"
-             alt="sandit-chat" />
-        <div id="chatBadge" class="chat-badge"></div>
-        <div id="chatTooltip">1:1 채팅 서비스입니다.</div>
-    </button>
-</div>
+<div th:replace="~{modal-chat :: modal-chat}"></div>
 
+</main>
 <!-- 푸터 -->
 <div th:replace="~{footer :: footer}"></div>
 
-<!-- 모달 -->
-<div id="modalContainer" hidden>
-    <div id="modalOverlay"></div>
-
-    <div id="modalContentWrapper">
-        <button id="modalCloseBtn" class="modal-close-btn">&times;</button>
-        <div id="modalContent"></div>
-    </div>
-</div>
-<script>
-    window.WEBSOCKET_URL = "[[${websocketUrl}]]";
+<script >
+    window.WEBSOCKET_URL = window.WEBSOCKET_URL || '[[${websocketUrl}]]';
 </script>
+
 </body>
 </html>
