--- a/src/main/resources/templates/chat/chat-rooms.html
+++ b/src/main/resources/templates/chat/chat-rooms.html
@@ -9,6 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 <!--    <script th:src="@{/js/common.js}"></script>-->
+<!--    <script th:src="@{/js/modal-chat.js}"></script>-->
+    <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/chat-rooms.js}"></script>
 
     <link th:href="@{/css/chat/chat-rooms.css}" rel="stylesheet">
@@ -28,8 +30,11 @@
     <!-- 방 목록이 여기에 표시됩니다 -->
 </div>
 
+<!--<script th:inline="javascript">-->
 <script>
-    const WEBSOCKET_URL = "[[${websocketUrl}]]";
+    window.WEBSOCKET_URL = window.WEBSOCKET_URL || '[[${websocketUrl}]]';
 </script>
+
+
 </body>
 </html>
