--- a/src/main/resources/templates/store/customer-store-list.html
+++ b/src/main/resources/templates/store/customer-store-list.html
@@ -5,10 +5,13 @@
     <title>가맹점 목록 | Sand-it</title>
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e0a9cdd5535d7bb018489c5662b3b5ae&autoload=false"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/layout.js}"></script>
+    <script th:src="@{/js/alarm.js}"></script>
     <script th:src="@{/js/store/customerStoreList.js}"></script>
 
     <link th:href="@{/css/common.css}" rel="stylesheet">
@@ -28,5 +31,8 @@
     </div>
 </div>
 <div th:replace="~{footer :: footer}"></div>
+<script>
+    const WEBSOCKET_URL = "[[${websocketUrl}]]";
+</script>
 </body>
 </html>
