--- a/src/main/resources/templates/menu/breadEdit.html
+++ b/src/main/resources/templates/menu/breadEdit.html
@@ -15,6 +15,7 @@
 <body>
   <div th:replace="~{header :: header}"></div>
   <div th:replace="~{navigation :: nav}"></div>
+<main>
 <div class="container">
   <h1>빵 정보 수정</h1>
   <form id="breadEditForm" enctype="multipart/form-data">
@@ -61,6 +62,7 @@
     </div>
   </form>
 </div>
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
