--- a/src/main/resources/templates/menu/cartList.html
+++ b/src/main/resources/templates/menu/cartList.html
@@ -18,7 +18,7 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
-
+<main>
 <div class="cart-container">
     <h1 class="cart-title">장바구니</h1>
 
@@ -52,6 +52,7 @@
     </form>
 </div>
 
+</main>
 <!-- 외부 스크립트는 body 하단에 위치 -->
 <div th:replace="~{footer :: footer}"></div>
 </body>
