--- a/src/main/resources/templates/menu/cheeseAdmin.html
+++ b/src/main/resources/templates/menu/cheeseAdmin.html
@@ -15,6 +15,7 @@
 <body>
   <div th:replace="~{header :: header}"></div>
   <div th:replace="~{navigation :: nav}"></div>
+<main>
 <div class="container">
   <h1>치즈 정보 입력</h1>
 
@@ -58,6 +59,7 @@
     </div>
   </form>
 </div>
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
