--- a/src/main/resources/templates/menu/customCart.html
+++ b/src/main/resources/templates/menu/customCart.html
@@ -15,7 +15,7 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
-
+<main>
 <form id="menuForm" action="#" method="post" enctype="multipart/form-data">
 <h2>커스텀 샌드위치 주문</h2>
     <div class="section">
@@ -95,7 +95,7 @@
         </div>
     </div>
 </form>
-
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
