--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -29,7 +29,7 @@
     <div th:replace="~{navigation :: nav}"></div>
     <h1>주문</h1>
 </header>
-
+<main>
 <div class="order-wrapper">
 <div id="cartContainer">
     <!-- JS로 장바구니 항목이 렌더링됨 -->
@@ -100,6 +100,7 @@
 </div>
 </div>
 </div>
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
