--- a/src/main/resources/templates/store/store-list.html
+++ b/src/main/resources/templates/store/store-list.html
@@ -15,6 +15,7 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
+<main>
 <div class="container">
     <div class="header-store-list">
         <h1 id="welcome-message">지점 목록</h1>
@@ -52,6 +53,7 @@
         <button id="nextPage" class="page-btn">다음</button>
     </div>
 </div>
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
