--- a/src/main/resources/templates/menu/breadAdmin.html
+++ b/src/main/resources/templates/menu/breadAdmin.html
@@ -15,6 +15,7 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
+<main>
 <div class="container">
     <h1>빵 정보 입력</h1>
 
@@ -63,6 +64,7 @@
         </div>
     </form>
 </div>
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
