--- a/src/main/resources/templates/menu/cheeseList.html
+++ b/src/main/resources/templates/menu/cheeseList.html
@@ -15,6 +15,7 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
+<main>
 <div class="container">
 <h1>치즈 목록</h1>
 <table>
@@ -51,6 +52,7 @@
 <button onclick="location.href='/cheeses/admin'">새 치즈 등록</button>
 <button onclick="location.href='/admin'" style="margin-left: 10px;">메인으로 가기</button>
 </div>
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
