--- a/src/main/resources/templates/menu/menuAdmin.html
+++ b/src/main/resources/templates/menu/menuAdmin.html
@@ -14,7 +14,7 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
-
+<main>
 <form id="menuForm" enctype="multipart/form-data">
     <h2>메뉴 등록</h2>
     <label>메뉴 이름:</label>
@@ -100,7 +100,7 @@
         <button type="button" class="btn btn-danger" onclick="location.href='/admin'">메인으로 가기</button>
     </div>
 </form>
-
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
