--- a/src/main/resources/templates/menu/menuList.html
+++ b/src/main/resources/templates/menu/menuList.html
@@ -15,6 +15,7 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
+<main>
 <div class="container">
 <h1>메뉴 목록</h1>
 <table>
@@ -46,6 +47,7 @@
     <button onclick="location.href='/admin'" style="margin-left: 10px;">메인으로 가기</button>
 </div>
 </div>
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
