--- a/src/main/resources/templates/menu/sideList.html
+++ b/src/main/resources/templates/menu/sideList.html
@@ -16,6 +16,7 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
+<main>
 <div class="container">
 <h1>사이드 목록</h1>
 <table>
@@ -52,6 +53,7 @@
 <button onclick="location.href='/sides/admin'">새 사이드 등록</button>
 <button onclick="location.href='/admin'" style="margin-left: 10px;">메인으로 가기</button>
 </div>
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
