--- a/src/main/resources/templates/menu/vegetableList.html
+++ b/src/main/resources/templates/menu/vegetableList.html
@@ -15,6 +15,7 @@
 <body>
 <div th:replace="~{header :: header}"></div>
 <div th:replace="~{navigation :: nav}"></div>
+<main>
 <div class="container">
 <h1>야채 목록</h1>
 <table>
@@ -51,6 +52,7 @@
 <button onclick="location.href='/vegetables/admin'">새 야채 등록</button>
 <button onclick="location.href='/admin'" style="margin-left: 10px;">메인으로 가기</button>
 </div>
+</main>
 <div th:replace="~{footer :: footer}"></div>
 </body>
 </html>
