--- a/src/main/resources/templates/store/store-detail.html
+++ b/src/main/resources/templates/store/store-detail.html
@@ -32,7 +32,7 @@
         </div>
         <div class="form-group">
             <label>지점관리자:</label>
-            <input type="text" id="store_manager" required>
+            <select id="store_manager"></select>
         </div>
         <div class="form-group">
             <label>주소:</label>
