--- a/src/main/resources/templates/chat/chat-room.html
+++ b/src/main/resources/templates/chat/chat-room.html
@@ -12,7 +12,7 @@
 
     <!-- 커스텀 JS/CSS -->
 <!--    <script th:src="@{/js/modal-chat.js}"></script>-->
-    <script th:src="@{/js/common.js}"></script>
+<!--    <script th:src="@{/js/common.js}"></script>-->
     <script th:src="@{/js/chat-room.js}"></script>
 
 
