--- a/src/main/resources/templates/chat/chat-rooms.html
+++ b/src/main/resources/templates/chat/chat-rooms.html
@@ -10,7 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 <!--    <script th:src="@{/js/common.js}"></script>-->
 <!--    <script th:src="@{/js/modal-chat.js}"></script>-->
-    <script th:src="@{/js/common.js}"></script>
+<!--    <script th:src="@{/js/common.js}"></script>-->
+<!--    모달에서 체크토큰이 전역에 영향을 끼침-->
     <script th:src="@{/js/chat-rooms.js}"></script>
 
     <link th:href="@{/css/chat/chat-rooms.css}" rel="stylesheet">
@@ -30,7 +31,7 @@
     <!-- 방 목록이 여기에 표시됩니다 -->
 </div>
 
-<!--<script th:inline="javascript">-->
+
 <script>
     window.WEBSOCKET_URL = window.WEBSOCKET_URL || '[[${websocketUrl}]]';
 </script>
