--- a/src/main/resources/templates/menu/menuForCustomer.html
+++ b/src/main/resources/templates/menu/menuForCustomer.html
@@ -10,22 +10,19 @@
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
 
-
-
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/modal-chat.css}" />
+    <link rel="stylesheet" th:href="@{/css/chat-button.css}" />
     <link rel="stylesheet" th:href="@{/css/menu/menuforCustomer.css}">
 
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/connectWebSocket.js}"></script>
     <script th:src="@{/js/modal-chat.js}"></script>
+    <script th:src="@{/js/alarm.js}"></script>
     <script th:src="@{/js/menu/menuForCustomer.js}"></script>
 
-
     <style>
-
-
         #chatTooltip {
             display: none;
             position: absolute;
@@ -87,7 +84,6 @@
 <script >
     window.WEBSOCKET_URL = window.WEBSOCKET_URL || '[[${websocketUrl}]]';
 </script>
-
 
 </body>
 </html>
