--- a/src/main/resources/templates/delivery/delivery-list.html
+++ b/src/main/resources/templates/delivery/delivery-list.html
@@ -9,10 +9,12 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
+
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/connectWebSocket.js}"></script>
     <script th:src="@{/js/modal-chat.js}"></script>
+    <script th:src="@{/js/alarm.js}"></script>
 
     <!-- 주문 목록 전용 스크립트 -->
     <script th:src="@{/js/delivery/deliveryList.js}"></script>
@@ -20,6 +22,7 @@
     <!-- 공용 CSS 스타일 -->
     <link th:href="@{/css/common.css}" rel="stylesheet"/>
     <link rel="stylesheet" th:href="@{/css/modal-chat.css}" />
+    <link rel="stylesheet" th:href="@{/css/chat-button.css}" />
     <link th:href="@{/css/delivery/deliveryList.css}" rel="stylesheet"/>
 
     <title>배달 목록</title>
@@ -103,7 +106,5 @@
 <script >
     window.WEBSOCKET_URL = window.WEBSOCKET_URL || '[[${websocketUrl}]]';
 </script>
-
-
 </body>
 </html>
