--- a/src/main/resources/templates/menu/menuCustomerList.html
+++ b/src/main/resources/templates/menu/menuCustomerList.html
@@ -14,6 +14,7 @@
     <!-- CSS -->
     <link rel="stylesheet" th:href="@{/css/common.css}" />
     <link rel="stylesheet" th:href="@{/css/modal-chat.css}" />
+    <link rel="stylesheet" th:href="@{/css/chat-button.css}" />
     <link rel="stylesheet" th:href="@{/css/menu/menuCustomerList.css}" />
 
     <!-- JS (페이지 하단에 위치해도 무방함) -->
@@ -22,6 +23,7 @@
     <script th:src="@{/js/allergyCheck.js}"></script>
     <script th:src="@{/js/connectWebSocket.js}"></script>
     <script th:src="@{/js/modal-chat.js}"></script>
+    <script th:src="@{/js/alarm.js}"></script>
     <script th:src="@{/js/menu/menuCustomerList.js}"></script>
 
 
