--- a/src/main/resources/templates/menu/sideMenuCustomerList.html
+++ b/src/main/resources/templates/menu/sideMenuCustomerList.html
@@ -16,6 +16,7 @@
     <!-- CSS -->
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/modal-chat.css}" />
+    <link rel="stylesheet" th:href="@{/css/chat-button.css}" />
     <link rel="stylesheet" th:href="@{/css/menu/sideMenuCustomerList.css}">
 
     <!-- JS -->
@@ -23,13 +24,12 @@
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/layout.js}"></script>
     <script th:src="@{/js/allergyCheck.js}"></script>
-    <script th:src="@{/js/menu/sideMenuCustomerList.js}"></script>
     <script th:src="@{/js/connectWebSocket.js}"></script>
     <script th:src="@{/js/modal-chat.js}"></script>
-
+    <script th:src="@{/js/alarm.js}"></script>
+    <script th:src="@{/js/menu/sideMenuCustomerList.js}"></script>
 
     <style>
-
 
         #chatTooltip {
             display: none;
