--- a/src/main/resources/templates/store/customer-store-list.html
+++ b/src/main/resources/templates/store/customer-store-list.html
@@ -11,12 +11,14 @@
 
     <script th:src="@{/js/common.js}"></script>
     <script th:src="@{/js/layout.js}"></script>
+    <script th:src="@{/js/connectWebSocket.js}"></script>
+    <script th:src="@{/js/modal-chat.js}"></script>
     <script th:src="@{/js/alarm.js}"></script>
     <script th:src="@{/js/store/customerStoreList.js}"></script>
-    <script th:src="@{/js/modal-chat.js}"></script>
 
     <link th:href="@{/css/common.css}" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/modal-chat.css}" />
+    <link rel="stylesheet" th:href="@{/css/chat-button.css}" />
     <link rel="stylesheet" th:href="@{/css/store/customerStoreList.css}">
 
 
@@ -68,7 +70,7 @@
 </main>
 <div th:replace="~{footer :: footer}"></div>
 <script>
-    const WEBSOCKET_URL = "[[${websocketUrl}]]";
+    window.WEBSOCKET_URL = window.WEBSOCKET_URL || '[[${websocketUrl}]]';
 </script>
 </body>
 </html>
