--- a/src/main/resources/templates/order/order-detail.html
+++ b/src/main/resources/templates/order/order-detail.html
@@ -17,6 +17,7 @@
   <script th:src="@{/js/order/orderCancel.js}"></script>
   <script th:src="@{/js/common.js}"></script>
   <script th:src="@{/js/layout.js}"></script>
+  <script th:src="@{/js/allergyCheck.js}"></script>
   <script th:src="@{/js/auth/profile.js}"></script>
   <script th:src="@{/js/findAddress.js}"></script>
   <script th:src="@{/js/store/storeList.js}"></script>
