--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -179,4 +179,11 @@ body {
     text-decoration: none;
     text-align: center;
     font-weight: 400;
+    cursor: pointer;
+}
+
+.footer-link:hover {
+    color: whitesmoke;
+    font-weight: 700;
+    transition: ease-in-out 0.3s;
 }
