--- a/src/main/resources/templates/menu/sideMenuCustomerList.html
+++ b/src/main/resources/templates/menu/sideMenuCustomerList.html
@@ -69,7 +69,7 @@
 <div th:replace="~{navigation :: nav}"></div>
 
 <!-- ✅ 메인 타이틀 -->
-<h1 class="main-heading">ENJOY! SAND-IT!</h1>
+<h1 class="main-heading">ENJOY~SANDIT!</h1>
 <main>
 <!-- ✅ 메뉴 전체 컨테이너 -->
 <div class="menu-container">
