--- a/src/main/resources/templates/auth/sign-up.html
+++ b/src/main/resources/templates/auth/sign-up.html
@@ -99,7 +99,7 @@
             </select>
         </div>
 
-        <div class="form-group" id="allergy-group" style="display: none;">
+        <div class="form-group" id="allergy-group" >
             <label>알레르기 선택</label>
 
             <!-- 자주 선택되는 항목 -->
