front code modify

--- a/src/main/resources/templates/order/order-detail.html
+++ b/src/main/resources/templates/order/order-detail.html
@@ -64,6 +64,7 @@
 
 <main>
   <h1>주문 내역</h1>
+  <button id="refresh-btn" class="btn">새로고침</button>
   <table id="order-table">
     <thead>
     <tr>
