--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -44,6 +44,15 @@
     </div>
 
     <div class="form-group">
+        <label for="addressSelect">배송지 선택</label>
+        <select id="addressSelect">
+            <option value="main" selected>기본 주소</option>
+            <option value="sub1">추가 주소 1</option>
+            <option value="sub2">추가 주소 2</option>
+        </select>
+    </div>
+
+    <div class="form-group">
         <label for="mainAddress">주소</label>
         <div class="address-group">
             <input type="text" id="mainAddress" placeholder="주소를 입력하세요">
