--- a/src/main/resources/static/css/order/orderDetail.css
+++ b/src/main/resources/static/css/order/orderDetail.css
@@ -7,6 +7,7 @@ body {
 }
 
 main {
+    position: relative;
     width: 90%;
     margin: 40px auto;
     background-color: rgba(255, 255, 255, 0.7);
@@ -21,6 +22,9 @@ h1 {
 }
 
 .btn {
+    position: absolute;
+    right: 40px;
+    top: 60px;
     color: #333;
     padding: 10px 22px;
     min-width: 90px;
