--- a/src/main/resources/templates/order/order-detail.html
+++ b/src/main/resources/templates/order/order-detail.html
@@ -90,6 +90,7 @@
     <span id="close-modal" class="modal-close">&times;</span>
     <h2>주문 상세</h2>
     <p>지점명: <span id="modal-store-name"></span></p>
+    <p>배달 주소: <span id="modal-address"></span></p>
     <p class="modal-label">메뉴:</p>
     <div id="modal-items-list" class="kiosk-menu-list"></div>
     <p>총 금액: <span id="modal-total-price"></span>원</p>
