--- a/src/main/resources/static/css/menu/cartList.css
+++ b/src/main/resources/static/css/menu/cartList.css
@@ -238,3 +238,9 @@ input[type="checkbox"]:checked::after {
     box-shadow: 0 2px 8px rgba(212, 93, 93, 0.3);
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    opacity: 1 !important;     /* 투명도 유지 */
+    pointer-events: auto !important;  /* 마우스 이벤트 허용 */
+    display: block !important;  /* 숨김 방지 */
+}
