--- a/src/main/resources/templates/modal-chat.html
+++ b/src/main/resources/templates/modal-chat.html
@@ -1,7 +1,7 @@
 <div class="chat-item" th:fragment="modal-chat">
   <button id="oneOnOneChatBtn"  type="button">
     <img id="sandit-chat"
-         src="https://himedia-sandis-20205.s3.ap-northeast-2.amazonaws.com/uploads/sandit.png"
+         src="https://himedia-sandis-20205.s3.ap-northeast-2.amazonaws.com/uploads/1b2ece98-928c-4219-bc80-07359cc95420.png"
          alt="sandit-chat" />
     <div id="chatBadge" class="chat-badge"></div>
     <div id="chatTooltip">1:1 채팅 서비스입니다.</div>
